# pyplotters

./: Cargo.toml  README.md  pyproject.toml  test.py
.github/workflows/: doc.yml  pdoc3.yml
api/: index.html
examples/: chrono.py
guide/: #  #.html  404.html  basic_code_example.html  book.toml  concepts.html  index.html  print.html  searchindex.js  searchindex.json  types.html  why_ezel.html
guide/src/: SUMMARY.md  basic_code_example.md  types.md  why_ezel.md
src/: area.rs  backend.rs  canvas.rs  chart.rs  color.rs  datetime.rs  dtype.rs  hack.rs  help.rs  lib.rs  mesh.rs  range.rs  series.rs
src/help/: mod.rs
